changed clients folders heirarchy

--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "smart-shopping-list",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
-    "node-sass-chokidar": "0.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
@@ -13,8 +12,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/style/ -o src/style --watch --recursive",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
