--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,38 @@
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "autoprefixer": "^6.7.3",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.1.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "css-loader": "^0.19.0",
+    "csscomb": "^3.1.8",
+    "csslint": "^0.10.0",
+    "csslint-loader": "^0.2.1",
+    "eslint": "^2.13.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^1.7.0",
+    "mobx-react-devtools": "^4.2.13",
+    "node-sass": "^4.4.0",
+    "postcss": "^5.0.19",
+    "postcss-loader": "^0.6.0",
+    "react-hot-loader": "3.1.3",
+    "sass": "^0.5.0",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "TARGET=dev node lib/dev_server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
