--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mobx": "^3.4.1",
-    "mobx-react": "^4.3.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "autoprefixer": "^6.7.3",
+    "axios": "^0.17.1",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
@@ -25,10 +22,14 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^1.7.0",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
     "mobx-react-devtools": "^4.2.13",
     "node-sass": "^4.4.0",
     "postcss": "^5.0.19",
     "postcss-loader": "^0.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-hot-loader": "3.1.3",
     "sass": "^0.5.0",
     "sass-loader": "^4.1.0",
