--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "moment": "^2.21.0"
   }
 }
