--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "moment": "^2.21.0"
+    "moment": "^2.21.0",
+    "react-autocomplete": "^1.8.1"
   }
 }
