--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.19.0",
     "csscomb": "^3.1.8",
     "csslint": "^0.10.0",
